adjust the api field
